# audiomod

./: .gitignore  CMakeLists.txt  README.md  build-android.sh  build-ios.sh  build-mac.sh
cmake/: FindAAXSDK.cmake  FindFFTWF.cmake  FindLibsamplerate.cmake  FindSndFile.cmake  FindVST3SDK.cmake
include/: audiomod.h
include/analyzer/: envelope.h
include/dafx/: autowah.h  biquadfilter.h  chorus.h  compressor.h  delay.h  distortion.h  dynamicfilter.h  equalizer.h  flanger.h  gain.h  iirfilter.h  limiter.h  loudnessmeter.h  modbase.h  phaser.h  phasevocoder.h  reverb.h  ringmod.h  tremolo.h  vibrato.h
main/: main.cc  wavfile.cc  wavfile.h
src/common/base/: circularqueue.h
src/common/dsp/: FFT.cc  FFT.h  lfo.cc  lfo.h  resampler.cc  resampler.h  windowfunc.h
src/common/filters/: biquadfilter.cc  denormals.h  iirfilter.cc  tuning.h
src/common/kissfft/: kiss_fft.c  kiss_fft.h  kiss_fftr.h
src/common/pommier/: neon_mathfun.h  sse_mathfun.h
src/common/speex/: speex_resampler.h
src/common/system/: memallocators.h  sys.cc  sys.h  vectorization.h
src/delayline/: chorus.cc  delay.cc  flanger.cc  vibrato.cc
src/distortion/: distortion.cc
src/dynamics/: compressor.cc  dynamicfilter.cc  limiter.cc
src/envelope/: envelope.cc
src/equalizer/: equalizer.cc
src/filtering/: autowah.cc  phaser.cc
src/gain/: gain.cc
src/meter/: loudnessmeter.cc
src/modulation/: ringmod.cc  tremolo.cc
src/phasevocoder/: channelinfo.cc  channelinfo.h  phasevocoder.cc  phasevocoderimpl.cc  phasevocoderimpl.h  phasevocoderinterface.cc  phasevocoderinterface.h  phasevocoderprocess.cc
src/reverb/: reverb.cc  revmodel.cc  revmodel.h
